<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="72dp"
    android:background="@drawable/bkg_menu_item"
    android:gravity="start|center_vertical"
    android:layout_marginTop="4dp"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="4dp"
    android:padding="8dp"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/icon_pizza"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/cont_desc_pizza_icon"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="4dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_pizza"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/example_pizza_name"
            android:textSize="18sp"
            android:textColor="@color/colorWhite"/>

        <TextView
            android:id="@+id/toppings_pizza"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/example_pizza_toppings"
            android:textSize="16sp"
            android:textStyle="italic"
            android:textColor="@color/colorVeryLightGrey"/>

    </LinearLayout>

    <!--ImageButton
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@null"
        android:src="@drawable/ic_sketch_edit_black_40dp"
        android:contentDescription="@string/cont_desc_edit_item_button"/-->

    <!--com.sackcentury.shinebuttonlib.ShineButton
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:siShape="@raw/raw_sketch_check_black_48dp"
        app:btn_color="@color/colorWhite"
        app:btn_fill_color="@color/elizabethOrange"
        app:allow_random_color="false"
        app:enable_flashing="false"
        app:click_animation_duration="200"
        app:shine_animation_duration="1500"
        app:shine_turn_angle="10"
        app:small_shine_offset_angle="20"
        app:shine_distance_multiple="1.5"
        app:small_shine_color="@color/timberlineGreen"
        app:big_shine_color="@color/elizabethOrange"
        app:shine_count="8"
        android:contentDescription="@string/cont_desc_icon_order_item"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp" /-->

</LinearLayout>